# algx

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
examples/: sudoku.rs
src/: lib.rs  node.rs  result.rs  wasm.rs
